syntax = "proto3";

option csharp_namespace = "TradeScriptRunner.BLL";

package alert;

// The greeting service definition.
service Alert {
  // Sends a greeting
  rpc ExecuteAlert (AlertRequest) returns (AlertReply);
}

// The request message containing the user's name.
message AlertRequest {
  string name = 1;
  string symbol = 2;
  string script = 3;
}

// The response message containing the greetings.
message AlertReply {
  string message = 1;
}